--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -8,7 +8,7 @@
 
     background-color: #c4c4c4;
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/index-hero-bg/hero-bg-mob.jpg);
+        url(../images/index-hero-bg/hero-bg-mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
 
@@ -16,30 +16,30 @@
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url(../../images/index-hero-bg/hero-bg-mob-2x.jpg);
+            url(../images/index-hero-bg/hero-bg-mob-2x.jpg);
         }
 
     @media screen and (min-width: 480px) {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url(../../images/index-hero-bg/hero-bg-tab.jpg);
+            url(../images/index-hero-bg/hero-bg-tab.jpg);
             
         @media (min-device-pixel-ratio: 2),
             (min-resolution: 192dpi),
             (min-resolution: 2dppx) {
                 background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-                url(../../images/index-hero-bg/hero-bg-tab-2x.jpg);
+                url(../images/index-hero-bg/hero-bg-tab-2x.jpg);
             }
         }
 
     @media screen and (min-width: 768px) {
         background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-            url(../../images/index-hero-bg/hero-bg-desk.jpg);
+            url(../images/index-hero-bg/hero-bg-desk.jpg);
     
         @media (min-device-pixel-ratio: 2),
         (min-resolution: 192dpi),
         (min-resolution: 2dppx) {
             background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-                url(../../images/index-hero-bg/hero-bg-desk-2x.jpg);
+                url(../images/index-hero-bg/hero-bg-desk-2x.jpg);
         }
     }
             
