--- a/css/main.css
+++ b/css/main.css
@@ -302,6 +302,7 @@ input:-webkit-autofill {
   padding: 48px 40px;
   background-color: #fff;
   transform: translateX(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile-menu-container.is-open {
   transform: translateX(0);
@@ -322,6 +323,7 @@ input:-webkit-autofill {
   min-width: 40px;
   min-height: 40px;
   background: transparent;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .menu-toggle:hover, .menu-toggle:focus {
   color: #2196F3;
@@ -360,6 +362,7 @@ input:-webkit-autofill {
   line-height: 1.175;
   letter-spacing: 0.02em;
   color: #212121;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .mobile-navigation__list-link:hover, .mobile-navigation__list-link:focus {
   color: #2196F3;
@@ -422,9 +425,6 @@ input:-webkit-autofill {
   width: 1px;
   height: 100%;
   background: rgba(33, 33, 33, 0.2);
-}
-.mobile-menu__socials-item:hover + .mobile-menu__socials-item:not(:last-child):after {
-  transform: rotate(90deg);
 }
 
 .mobile-menu__socials-link {
