--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -10,6 +10,7 @@
     background-color: #fff;
 
     transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &.is-open {
             transform: translateX(0);
@@ -33,6 +34,7 @@
     min-height: 40px;
 
     background: transparent;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover, &:focus {
         color: #2196F3;
@@ -79,6 +81,7 @@
     letter-spacing: 0.02em;
     
     color: #212121;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover, &:focus{
         color: #2196F3;
@@ -151,9 +154,6 @@
         height: 100%;
         background: rgba(33, 33, 33, 0.2);
     }
-
-    &:hover + .mobile-menu__socials-item:not(:last-child):after {
-        transform: rotate(90deg);}
 }
 
 .mobile-menu__socials-link {
